--- a/Java/Clase03/estudiantes/src/main/resources/application.properties
+++ b/Java/Clase03/estudiantes/src/main/resources/application.properties
@@ -1,12 +1,17 @@
-# Conexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes
-spring.datasource.username=root
-spring.datasource.password=admin
+# --- Configuración de la BD ---
+spring.datasource.url=jdbc:mysql://localhost:3306/estudiantesdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Argentina/Buenos_Aires
+spring.datasource.username=estudiante
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Evitar que se cree el esquema nuevamente
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+# --- Configuración de JPA/Hibernate ---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# Desactivar el tomcat
-spring.main.web-application-type=none
+# --- Logging ---
+logging.level.root=OFF
+logging.level.utn.estudiantes.EstudiantesApplication=INFO
+logging.level.org.hibernate=OFF
+logging.level.org.springframework=OFF
+logging.level.org.apache.catalina=OFF
