--- a/Java/Clase10/tienda_libros/src/main/resources/application.properties
+++ b/Java/Clase10/tienda_libros/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=tienda_libros
 # Conexion a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/tienda_libros_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -7,4 +8,3 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Crear la base de datos en caso de ser necesario
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
